--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 aiohttp==3.6.2
 async-timeout==3.0.1
 attrs==19.3.0
-certifi==2020.4.5.1
+beautifulsoup4==4.9.3
+certifi==2020.12.5
 chardet==3.0.4
-Cogs==0.4.4
 discord.py==1.3.3
 idna==2.9
 multidict==4.7.5
 python-dotenv==0.13.0
-PyYAML==5.3.1
-requests==2.23.0
-urllib3==1.25.9
+requests==2.25.1
+soupsieve==2.1
+urllib3==1.26.2
 websockets==8.1
+wikipedia==1.4.0
 yarl==1.4.2
